# signalo

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dependencies.dot  renovate.json
.github/configs/: skywalking-eyes.yml
.github/workflows/: other.yml  rust.yml
crates/filters/: Cargo.toml  README.md
crates/filters/src/: bounds.rs  cache.rs  circular_buffer.rs  convolve.rs  delay.rs  differentiate.rs  hampel.rs  identity.rs  integrate.rs  lib.rs  mean.rs  median.rs  observe.rs  ops.rs  unit_system.rs  wavelet.rs
crates/filters/src/bounds/: max.rs  min.rs
crates/filters/src/classify/: debounce.rs  mod.rs  peaks.rs  schmitt.rs  slopes.rs  threshold.rs
crates/filters/src/convolve/: savitzky_golay.rs
crates/filters/src/mean/: mean.rs  mean_variance.rs
crates/filters/src/mean/exp/: mean.rs  mean_variance.rs
crates/filters/src/median/: exp.rs
crates/filters/src/observe/: alpha_beta.rs  kalman.rs
crates/filters/src/ops/: add.rs  div.rs  mod.rs  mul.rs  neg.rs  rem.rs  square.rs  sub.rs
crates/filters/src/wavelet/: analyze.rs  daubechies.rs  synthesize.rs
crates/pipes/: Cargo.toml  README.md
crates/pipes/src/: lib.rs  pipe.rs  unit_pipe.rs
crates/signalo/: Cargo.toml
crates/signalo/src/: lib.rs
crates/sinks/: Cargo.toml  README.md
crates/sinks/src/: collect.rs  integrate.rs  lib.rs  mean.rs  mean_variance.rs  statistics.rs  unit_system.rs
crates/sources/: Cargo.toml  README.md
crates/sources/src/: cache.rs  chain.rs  constant.rs  cycle.rs  from_iter.rs  increment.rs  into_iter.rs  lib.rs  pad.rs  peek.rs  repeat.rs  skip.rs  take.rs  unit_system.rs
crates/sources/src/pad/: constant.rs  edge.rs
crates/traits/: Cargo.toml  README.md
crates/traits/src/: filter.rs  lib.rs  sink.rs
filters/: Cargo.toml  README.md
filters/src/: cache.rs  circular_buffer.rs  delay.rs  differentiate.rs  hampel.rs  identity.rs  integrate.rs  lib.rs  traits.rs  unit_system.rs
filters/src/classify/: debounce.rs  mod.rs  peaks.rs  schmitt.rs  slopes.rs  threshold.rs
filters/src/convolve/: mod.rs  savitzky_golay.rs
filters/src/filter/: delay.rs  differentiate.rs  hampel.rs  identity.rs  mod.rs
filters/src/filter/classify/: debounce.rs  mod.rs  peaks.rs  schmitt.rs  slopes.rs  threshold.rs
filters/src/filter/convolve/: mod.rs  savitzky_golay.rs
filters/src/filter/dichotomy/: debounce.rs  mod.rs  schmitt.rs  threshold.rs
filters/src/filter/kalman/: mod.rs
filters/src/filter/mean/: mean.rs  mean_variance.rs  mod.rs
filters/src/filter/mean/approx/: mod.rs
filters/src/filter/mean/exp/: mean.rs  mean_variance.rs  mod.rs
filters/src/filter/median/: median.rs  mod.rs
filters/src/filter/median/approx/: mod.rs
filters/src/filter/median/exp/: mod.rs
filters/src/filter/observe/: alpha_beta.rs  kalman.rs  mod.rs
filters/src/filter/ops/: add.rs  div.rs  mod.rs  mul.rs  neg.rs  rem.rs  square.rs  sub.rs
filters/src/filter/wavelet/: analyze.rs  daubechies.rs  mod.rs  synthesize.rs
filters/src/mean/: mean.rs  mean_variance.rs  mod.rs
filters/src/mean/exp/: mean.rs  mean_variance.rs
filters/src/median/: mod.rs
filters/src/median/exp/: mod.rs
filters/src/observe/: alpha_beta.rs  kalman.rs
filters/src/ops/: add.rs  div.rs  mul.rs  neg.rs  rem.rs  square.rs  sub.rs
filters/src/sink/: bounds.rs  integrate.rs  last.rs  max.rs  mean.rs  mean_variance.rs  min.rs  mod.rs  sum.rs
filters/src/source/: chain.rs  constant.rs  cycle.rs  from_iter.rs  increment.rs  into_iter.rs  iter.rs  mod.rs  repeat.rs  skip.rs  take.rs
filters/src/source/pad/: constant.rs  edge.rs  mod.rs
filters/src/wavelet/: analyze.rs  daubechies.rs  synthesize.rs
pipes/: Cargo.toml  README.md
pipes/src/: lib.rs  unit_pipe.rs
pipes/src/filter/: mod.rs  pipe.rs  unit_pipe.rs
pipes/src/pipe/: mod.rs
pipes/src/pipe/filter/: mod.rs  unit_pipe.rs
pipes/src/pipe/sink/: mod.rs  unit_pipe.rs
pipes/src/pipe/source/: mod.rs  unit_pipe.rs
pipes/src/sink/: mod.rs  pipe.rs  unit_pipe.rs
pipes/src/source/: mod.rs  pipe.rs  unit_pipe.rs
signalo/: Cargo.toml  README.md
signalo/src/: lib.rs
sinks/: Cargo.toml  README.md
sinks/src/: bounds.rs  collect.rs  integrate.rs  last.rs  lib.rs  max.rs  mean.rs  mean_variance.rs  min.rs  statistics.rs  unit_system.rs
sources/: Cargo.toml  README.md
sources/src/: cache.rs  chain.rs  constant.rs  cycle.rs  from_iter.rs  into_iter.rs  lib.rs  peek.rs  repeat.rs  skip.rs  take.rs  unit_system.rs
sources/src/pad/: constant.rs  edge.rs
src/: filters.rs  lib.rs  math.rs  pipes.rs  sinks.rs  sources.rs  storage.rs  traits.rs  util.rs
src/assembly/: mod.rs  pipe.rs  unit_pipe.rs
src/assembly/filter/: mod.rs  unit_pipe.rs
src/filter/: differentiate.rs  identity.rs  mod.rs  pipe.rs  source.rs
src/filter/convolve/: mod.rs
src/filter/dichotomy/: debounce.rs  mod.rs  schmitt.rs  threshold.rs
src/filter/kalman/: mod.rs
src/filter/mean/: fixed.rs  float.rs  mod.rs
src/filter/ops/: add.rs  div.rs  mod.rs  mul.rs  square.rs  sub.rs
src/filters/: biquad.rs  bounds.rs  cache.rs  classify.rs  convolve.rs  delay.rs  differentiate.rs  envelope.rs  estimate.rs  fir.rs  hampel.rs  identity.rs  iir.rs  integrate.rs  mean.rs  median.rs  mod.rs  observe.rs  ops.rs  rank.rs  unit_system.rs  util.rs  wavelet.rs
src/filters/biquad/: cascade.rs  (+1 more)
src/math/: phase.rs
src/pipes/: pipe.rs  unit_pipe.rs
src/piping/: mod.rs
src/sink/: last.rs  mod.rs  sum.rs
src/sinks/: bounds.rs  collect.rs  correlation.rs  histogram.rs  integrate.rs  last.rs  max.rs  mean.rs  mean_variance.rs  min.rs  mod.rs  peak_hold.rs  percentile.rs  rms.rs  statistics.rs  unit_system.rs
src/source/: constant.rs  increment.rs  iter.rs  mod.rs
src/sources/: cache.rs  chain.rs  constant.rs  cycle.rs  from_iter.rs  impulse.rs  increment.rs  into_iter.rs  noise.rs  oscillator.rs  pad.rs  peek.rs  repeat.rs  skip.rs  step.rs  take.rs  unit_system.rs
src/traits/: filter.rs  finalize.rs  multirate_filter.rs  sink.rs  source.rs
src/util/: test_fixtures.rs
traits/: Cargo.toml  README.md
traits/src/: filter.rs  finalize.rs  lib.rs  sink.rs  source.rs
(+139 files in other folders)
