[package]
name = "signalo"
description = "A DSP toolbox with focus on embedded environments."
categories = ["no-std", "embedded", "multimedia", "science", "algorithms"]
keywords = ["dsp", "signal-processing", "sdr", "radio"]
readme = "README.md"
license = "MPL-2.0"
repository = "https://github.com/signalo/signalo"
rust-version = "1.93.0"
edition = "2021"
version = "0.9.0"

[dependencies]
circular-buffer = { version = "2.0.0", default-features = false }
dimensioned = { version = "0.8", optional = true, default-features = false }
guts = { version = "0.2.0", default-features = false }
libm = { version = "0.2.16", optional = true, default-features = false }
num-complex = { version = "0.4", optional = true, default-features = false }
num-traits = { version = "0.2", default-features = false }
replace_with = { version = "0.1.5", default-features = false }

[dev-dependencies]
approx = { version = "=0.5.1", default-features = false }
droptest = "=0.2.1"

[features]
default = ["std"]
alloc = ["circular-buffer/alloc"]
complex = ["dep:num-complex"]
libm = ["dep:libm", "num-complex?/libm", "num-traits/libm"]
std = [
    "alloc",
    "guts/std",
    "replace_with/std",
    "circular-buffer/std",
    "num-complex?/std",
    "num-traits/std",
    "dimensioned?/std",
]
panic_abort = ["replace_with/panic_abort"]
derive = []
derive_reset_mut = []
dimensioned = ["dep:dimensioned"]
