[package]
authors = ["Vincent Esche <regexident@gmail.com>"]
categories = [
    "no-std",
    "embedded",
    "multimedia",
    "science",
    "algorithms",
]
description = "A collection of filters used in 'signalo' umbrella crate."
documentation = "https://docs.rs/svm"
homepage = "https://github.com/signalo/signalo/tree/master/filters"
keywords = [
    "dsp",
    "digital-signal",
    "signal-processing",
    "filters",
    "pipeline",
]
license = "MPL-2.0"
name = "signalo_filters"
readme = "README.md"
repository = "https://github.com/signalo/signalo"
version = "0.4.0"

[dependencies.arraydeque]
version = "~0.4"
default-features = false
features = [
    "use_generic_array",
]

[dependencies.dimensioned]
version = "~0.7"
optional = true
default-features = false

[dependencies.num-traits]
version = "~0.2"
default-features = false

[dependencies.generic-array]
version = "~0.11"
default-features = false

[dependencies.missing_mpl]
optional = true
version = "~0.1"

[dependencies.signalo_traits]
version = "~0.3"
path = "../traits"
default-features = false

[dev-dependencies]
nearly_eq = "~0.2"

[features]
default = ["std"]
std = [
    "signalo_traits/std",
    "arraydeque/std",
    "num-traits/std",
    "dimensioned/std",
]
nightly = ["missing_mpl"]
