[package]
authors = ["Vincent Esche <regexident@gmail.com>"]
categories = [
    "no-std",
    "embedded",
    "multimedia",
    "science",
    "algorithms",
]
description = "A collection of filters used in 'signalo' umbrella crate."
documentation = "https://docs.rs/signalo_filters"
keywords = [
    "dsp",
    "digital-signal",
    "signal-processing",
    "filters",
    "pipeline",
]
license = "MPL-2.0"
name = "signalo_filters"
readme = "README.md"
repository = "https://github.com/signalo/signalo"
homepage = "https://github.com/signalo/signalo/tree/master/filters"
version = "0.5.1"

[dependencies.arraydeque]
version = "~0.4"
default-features = false
features = [
    "use_generic_array",
]

[dependencies.dimensioned]
version = "~0.7"
optional = true
default-features = false

[dependencies.num-traits]
version = "~0.2"
default-features = false

[dependencies.generic-array]
version = "~0.11"
default-features = false

[dependencies.signalo_traits]
version = "~0.4"
path = "../traits"
default-features = false

[dev-dependencies]
nearly_eq = "~0.2"

[features]
default = ["std"]
std = [
    "signalo_traits/std",
    "arraydeque/std",
    "num-traits/std",
    "dimensioned/std",
]
