[package]
name = "signalo_filters"
description = "A collection of filters used in 'signalo' umbrella crate."
categories = ["no-std", "embedded", "multimedia", "science", "algorithms"]
keywords = ["dsp", "digital-signal", "signal-processing", "filters", "pipeline"]
readme = "README.md"
license.workspace = true
repository.workspace = true
version = "0.6.0"

[dependencies]
dimensioned = { version = "0.7", optional = true, default-features = false }
num-traits = { workspace = true }
signalo_traits = { version = "0.5", path = "../traits", default-features = false }

[dev-dependencies]
nearly_eq = { workspace = true }
testdrop = "0.1.2"

[features]
default = []
std = ["signalo_traits/std", "num-traits/std", "dimensioned/std"]
panic_abort = ["signalo_traits/panic_abort"]
derive = []
