[package]
authors = ["Vincent Esche <regexident@gmail.com>"]
categories = [
    "no-std",
    "embedded",
    "multimedia",
    "science",
    "algorithms",
]
description = "A collection of pipes used in 'signalo' umbrella crate."
documentation = "https://docs.rs/svm"
keywords = [
    "dsp",
    "digital-signal",
    "signal-processing",
    "filters",
    "pipeline",
]
license = "MPL-2.0"
name = "signalo_pipes"
readme = "README.md"
repository = "https://github.com/signalo/signalo"
homepage = "https://github.com/signalo/signalo/tree/master/pipes"
version = "0.3.0"

[dependencies.signalo_traits]
version = "~0.2"
path = "../traits"
default-features = false

[dependencies.signalo_filters]
version = "~0.3"
path = "../filters"
default-features = false

[dependencies.missing_mpl]
version = "~0.1"
optional = true

[features]
default = ["std"]
std = [
    "signalo_traits/std",
    "signalo_filters/std",
]
nightly = ["missing_mpl"]
