[package]
name = "signalo_pipes"
description = "A collection of pipes used in 'signalo' umbrella crate."
categories = ["no-std", "embedded", "multimedia", "science", "algorithms"]
keywords = ["dsp", "digital-signal", "signal-processing", "filters", "pipeline"]
readme = "README.md"
license.workspace = true
repository.workspace = true
version = "0.5.1"

[dependencies.signalo_traits]
version = "0.5"
path = "../traits"
default-features = false

[features]
default = []
std = ["signalo_traits/std"]
