[package]
authors = ["Vincent Esche <regexident@gmail.com>"]
categories = [
    "no-std",
    "embedded",
    "multimedia",
    "science",
    "algorithms",
]
description = "A DSP toolbox with focus on embedded environments."
documentation = "https://docs.rs/svm"
keywords = [
    "dsp",
    "digital-signal",
    "signal-processing",
    "filters",
    "pipeline",
]
license = "MPL-2.0"
name = "signalo"
readme = "../README.md"
repository = "https://github.com/signalo/signalo"
homepage = "https://github.com/signalo/signalo/tree/master/signalo"
version = "0.3.1"

[dependencies.signalo_traits]
version = "~0.2"
path = "../traits"
default-features = false

[dependencies.signalo_filters]
version = "~0.3"
path = "../filters"
default-features = false

[dependencies.signalo_sinks]
version = "~0.3"
path = "../sinks"
default-features = false

[dependencies.signalo_sources]
version = "~0.3"
path = "../sources"
default-features = false

[dependencies.signalo_pipes]
version = "~0.3"
path = "../pipes"
default-features = false

[dependencies.missing_mpl]
version = "~0.1"
optional = true

[features]
default = ["std"]
std = [
    "signalo_traits/std",
    "signalo_filters/std",
    "signalo_sinks/std",
    "signalo_sources/std",
    "signalo_pipes/std",
]
nightly = ["missing_mpl"]
