[package]
name = "signalo"
description = "A DSP toolbox with focus on embedded environments."
categories = ["no-std", "embedded", "multimedia", "science", "algorithms"]
keywords = ["dsp", "digital-signal", "signal-processing", "filters", "pipeline"]
readme = "README.md"
license.workspace = true
repository.workspace = true
version = "0.6.0"

[dependencies]
signalo_filters = { version = "0.6", path = "../filters", default-features = false }
signalo_pipes = { version = "0.5", path = "../pipes", default-features = false }
signalo_sinks = { version = "0.5", path = "../sinks", default-features = false }
signalo_sources = { version = "0.5", path = "../sources", default-features = false }
signalo_traits = { version = "0.5", path = "../traits", default-features = false }

[features]
default = []
std = [
    "signalo_traits/std",
    "signalo_filters/std",
    "signalo_sinks/std",
    "signalo_sources/std",
    "signalo_pipes/std",
]
dimensioned = [
    "signalo_filters/dimensioned",
    "signalo_sinks/dimensioned",
    "signalo_sources/dimensioned",
]
