[package]
name = "signalo_sinks"
description = "A collection of signal sinks used in 'signalo' umbrella crate."
categories = ["no-std", "embedded", "multimedia", "science", "algorithms"]
keywords = ["dsp", "digital-signal", "signal-processing", "filters", "pipeline"]
readme = "README.md"
license.workspace = true
repository.workspace = true
version = "0.5.2"

[dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.dimensioned]
version = "0.7"
optional = true
default-features = false

[dependencies.signalo_traits]
version = "0.5"
path = "../traits"
default-features = false

[dev-dependencies]
nearly_eq = "0.2"

[features]
default = []
std = ["signalo_traits/std", "num-traits/std", "dimensioned/std"]
