[package]
authors = ["Vincent Esche <regexident@gmail.com>"]
categories = [
    "no-std",
    "embedded",
    "multimedia",
    "science",
    "algorithms",
]
description = "A collection of filters used in 'signalo' umbrella crate."
documentation = "https://docs.rs/signalo_sources"
keywords = [
    "dsp",
    "digital-signal",
    "signal-processing",
    "filters",
    "pipeline",
]
license = "MPL-2.0"
name = "signalo_sources"
readme = "README.md"
repository = "https://github.com/signalo/signalo"
homepage = "https://github.com/signalo/signalo/tree/master/filters"
version = "0.5.1"

[dependencies.num-traits]
version = "~0.2"
default-features = false

[dependencies.dimensioned]
version = "~0.7"
optional = true
default-features = false

[dependencies.missing_mpl]
optional = true
version = "~0.1"

[dependencies.signalo_traits]
version = "~0.4"
path = "../traits"
default-features = false

[dev-dependencies]
nearly_eq = "~0.2"

[features]
default = ["std"]
std = [
    "signalo_traits/std",
    "num-traits/std",
    "dimensioned/std",
]
nightly = ["missing_mpl"]
