[package]
authors = ["Vincent Esche <regexident@gmail.com>"]
categories = [
    "no-std",
    "embedded",
    "multimedia",
    "science",
    "algorithms",
]
description = "A collection of traits used in 'signalo' umbrella crate."
documentation = "https://docs.rs/signalo_traits"
keywords = [
    "dsp",
    "digital-signal",
    "signal-processing",
    "filters",
    "pipeline",
]
license = "MPL-2.0"
name = "signalo_traits"
readme = "README.md"
repository = "https://github.com/signalo/signalo"
homepage = "https://github.com/signalo/signalo/tree/master/traits"
version = "0.4.0"

[dependencies]
guts = "~0.1.1"

[dependencies.missing_mpl]
version = "~0.1"
optional = true

[dependencies.replace_with]
version = "~0.1.5"
default-features = false
features = []

[features]
default = [
    "std",
]
std = [
    "replace_with/std",
]
nightly = [
    "missing_mpl",
]
panic_abort = [
    "replace_with/panic_abort",
]
