[package]
name = "signalo_traits"
description = "A collection of traits used in 'signalo' umbrella crate."
categories = ["no-std", "embedded", "multimedia", "science", "algorithms"]
keywords = ["dsp", "digital-signal", "signal-processing", "filters", "pipeline"]
readme = "README.md"
license.workspace = true
repository.workspace = true
version = "0.5.0"

[dependencies]
guts = "0.1.1"
replace_with = { version = "0.1.5", default-features = false, features = [] }

[features]
default = []
std = ["replace_with/std"]
panic_abort = ["replace_with/panic_abort"]
derive_reset_mut = []
