[package]
name = "signalo_filters"
description = "A collection of filters used in 'signalo' umbrella crate."
categories = ["no-std", "embedded", "multimedia", "science", "algorithms"]
keywords = ["dsp", "digital-signal", "signal-processing", "filters", "pipeline"]
readme = "README.md"
license.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
version = "0.6.0"

[dependencies]
circular-buffer = { workspace = true }
dimensioned = { version = "0.7", optional = true, default-features = false }
num-traits = { workspace = true }

# workspace members:
signalo_traits = { workspace = true }

[dev-dependencies]
nearly_eq = { workspace = true }
droptest = "0.2.1"

[features]
default = []
alloc = []
std = [
    "alloc",
    "circular-buffer/std",
    "dimensioned/std",
    "num-traits/std",
    "signalo_traits/std",
]
panic_abort = ["signalo_traits/panic_abort"]
derive = []
