[package]
name = "signalo_pipes"
description = "A collection of pipes used in 'signalo' umbrella crate."
categories = ["no-std", "embedded", "multimedia", "science", "algorithms"]
keywords = ["dsp", "digital-signal", "signal-processing", "filters", "pipeline"]
readme = "README.md"
license.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
version = "0.5.1"

[dependencies]
# workspace members:
signalo_traits = { workspace = true }

[features]
default = []
std = ["signalo_traits/std"]
