[package]
name = "signalo"
description = "A DSP toolbox with focus on embedded environments."
categories = ["no-std", "embedded", "multimedia", "science", "algorithms"]
keywords = ["dsp", "digital-signal", "signal-processing", "filters", "pipeline"]
readme = "README.md"
license.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
version = "0.6.1"

[dependencies]
# workspace members:
signalo_filters = { workspace = true }
signalo_pipes = { workspace = true }
signalo_sinks = { workspace = true }
signalo_sources = { workspace = true }
signalo_traits = { workspace = true }

[features]
default = []
std = [
    "signalo_traits/std",
    "signalo_filters/std",
    "signalo_sinks/std",
    "signalo_sources/std",
    "signalo_pipes/std",
]
dimensioned = [
    "signalo_filters/dimensioned",
    "signalo_sinks/dimensioned",
    "signalo_sources/dimensioned",
]
