[package]
name = "signalo_sources"
description = "A collection of signal sources used in 'signalo' umbrella crate."
categories = ["no-std", "embedded", "multimedia", "science", "algorithms"]
keywords = ["dsp", "digital-signal", "signal-processing", "filters", "pipeline"]
readme = "README.md"
license.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true
version = "0.5.2"

[dependencies]
dimensioned = { version = "0.7", optional = true, default-features = false }
num-traits = { workspace = true }

# workspace members:
signalo_traits = { workspace = true }

[dev-dependencies]
nearly_eq = { workspace = true }

[features]
default = []
std = ["signalo_traits/std", "num-traits/std", "dimensioned/std"]
